--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.12",
+    "react-map-gl-directions": "file:react-map-gl-directions",
     "react-scripts": "4.0.3",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.0.1"
